# tradingai

./: .deploy-init  .gitignore
backend/: Dockerfile  alembic.ini  deploy_migrate.py  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routers/: __init__.py  ict.py  (+15 more)
backend/app/core/: __init__.py  exceptions.py  logging.py  redis.py  security.py
backend/app/db/: __init__.py  base.py  enums.py  session.py
backend/app/models/: __init__.py  ai_analysis.py  alert.py  audit_log.py  broker_connection.py  candle.py  checklist.py  edit_diff.py  ict_detection.py  order.py  prop_firm_profile.py  prop_firm_snapshot.py  scoring_profile.py  screenshot.py  settings.py  trade.py
backend/app/schemas/: __init__.py  alert.py  analysis.py  audit.py  broker.py  common.py  ict.py  propfirm.py  screenshot.py  settings.py  trade.py  ws.py
backend/tests/: __init__.py  conftest.py  test_exceptions.py  test_security.py  test_smoke.py  test_startup.py
backend/tests/integration/: conftest.py  test_alerts_api.py
backend/tests/unit/: conftest.py  test_audit_logger.py  test_broker_contract.py  test_calendar_service.py  test_circuit_breaker.py  test_compliance_engine.py  test_cryptofundtrader_adapter.py  test_decision_alerts.py  test_execution.py  test_governance.py  test_ict_detector.py  test_indicators.py  test_journal_service.py  test_kill_switch.py  test_market_aggregator.py  test_oanda_adapter.py  test_observe_sync.py  test_scoring.py
(+114 files in other folders)
