[tool.poetry]
name = "tradingai-backend"
version = "0.1.0"
description = "Trading AI Co-Pilot Backend"
authors = ["Trading AI Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
loguru = "^0.7.0"
httpx = "^0.27.0"
redis = {extras = ["asyncio"], version = "^5.0.0"}
anthropic = "^0.30.0"
cryptography = "^42.0.0"
python-multipart = "^0.0.9"
aiosmtplib = "^3.0.0"
apscheduler = "^3.10.0"
slowapi = "^0.1.9"
smartmoneyconcepts = "^0.0.22"
pandas = "^2.2.0"
numpy = "^1.26.0"
pandas-ta = ">=0.3.14b"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
mypy = "^1.10.0"
factory-boy = "^3.3.0"
httpx = "^0.27.0"
anyio = {extras = ["trio"], version = "^4.4.0"}
fakeredis = {extras = ["lua"], version = "^2.23.0"}
aiosqlite = "^0.20.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration (need docker services)",
  "slow: marks tests as slow (>5s)"
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
